WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279850
Unreviewed Catalyst build fix after
283795@main
https://bugs.webkit.org/show_bug.cgi?id=279850
Summary
Unreviewed Catalyst build fix after 283795@main
Chris Dumez
Reported
2024-09-17 16:44:54 PDT
Unreviewed Catalyst build fix after
283795@main
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2024-09-17 16:44:56 PDT
<
rdar://problem/136183540
>
Chris Dumez
Comment 2
2024-09-17 16:45:55 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33791
EWS
Comment 3
2024-09-17 16:50:38 PDT
Committed
283809@main
(9d89447e8030): <
https://commits.webkit.org/283809@main
> Reviewed commits have been landed. Closing PR #33791 and removing active labels.
EWS
Comment 4
2024-09-18 13:00:12 PDT
Committed
280938.354@safari-7619-branch
(c79fe02b4274): <
https://commits.webkit.org/280938.354@safari-7619-branch
> Reviewed commits have been landed. Closing PR #1817 and removing active labels.
EWS
Comment 5
2024-09-18 18:32:16 PDT
Committed
283286.88@safari-7620-branch
(4a6bcaf29c86): <
https://commits.webkit.org/283286.88@safari-7620-branch
> Reviewed commits have been landed. Closing PR #1839 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug