Unreviewed Catalyst build fix after 283795@main https://bugs.webkit.org/show_bug.cgi?id=279850 rdar://136183540

* Source/WebKit/Shared/WebProcessCreationParameters.h:

Canonical link: https://commits.webkit.org/283809@main